add python code

--- a/hog.ipynb
+++ b/hog.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3f4ec825",
+   "id": "53ef420b",
    "metadata": {},
    "source": [
     "# HOG\n",
     "### Histogram of oriented gradient\n",
-    "https://zhuanlan.zhihu.com/p/85829145"
+    "* https://zhuanlan.zhihu.com/p/85829145\n",
+    "* original:\n",
+    "    * https://learnopencv.com/histogram-of-oriented-gradients/"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8c3da5cc",
+   "id": "a21393c6",
    "metadata": {},
    "source": [
     "### 确定interpreter"
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0202e19c",
+   "id": "6ed34776",
    "metadata": {},
    "source": [
     "### 显示图像"
@@ -106,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "ebf7dc3e",
+   "id": "1e575a73",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "200a2c57",
+   "id": "d38cb9f4",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "f9674eca",
+   "id": "a4662d25",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6284652f",
+   "id": "155ae18d",
    "metadata": {},
    "source": [
     "### 当前版本的scikit-image是0.19.1 \n",
@@ -272,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "c21d9d4e",
+   "id": "023f70a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "4b15b6a7",
+   "id": "f80e714e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "378bc437",
+   "id": "77caf1e1",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "f94e585f",
+   "id": "e1169f99",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "6a1a1eb8",
+   "id": "093ca16a",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c054876a",
+   "id": "f38cc0c7",
    "metadata": {},
    "outputs": [],
    "source": []
